<resources>
    <string name="app_name">LiveCare Patient</string>
    <string name="title_about_us">About Us</string>
    <string name="title_terms_and_conditions">Terms And Conditions</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="dummy_about_us_content">
About Us- The Company uses third party providers to manage the data security for this site. All data is stored in encrypted format that meets standards defined by HIPAA (Health Insurance Portability and Accountability Act). All data transfer is executed using similar standards that meet or exceed HIPAA, and no data is transferred to users that do not have specific data access keys.The Company uses third party providers to manage the data security for this site. All data is stored in encrypted format that meets standards defined by HIPAA (Health Insurance Portability and Accountability Act). All data transfer is executed using similar standards that meet or exceed HIPAA, and no data is transferred to users that do not have specific data access keys.

\n\nCookies are data stored on the user’s hard drive containing information about the user’s browsing history. Usage of a cookie is not linked to any personally identifiable information while visiting the Company’s site.

\n\nBy using the Company’s and services, you signify your acceptance of this Privacy Policy, as stated. If you do not agree to this policy, you should not continue, and you should not use our service. Should we make any changes to the Privacy Policy, we will post these changes prominently, so users are always aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it. We recommend that you read this Privacy Policy each time you use our Website in case you missed our notice of changes to the Privacy Policy. Your continued use of the services and site following the posting of changes to these terms will mean you accept those changes.

\n\nThe Health Insurance Portability &amp; Accountability Act of 1996 (HIPAA) is a federal program requiring that all medical records and other individually identifiable health information used, or disclosed, by us in any form, whether electronically, on paper, or orally, are kept properly confidential. This Act gives you, the Patient, significant new rights to understand and control how your health information is used. HIPAA provides penalties for covered entities that misuse personal health information.If you do not agree to this policy, you should not continue, and you should not use our service. Should we make any changes to the Privacy Policy, we will post these changes prominently, so users are always aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it.
    </string>
    <string name="dummy_term_and_condition_content">
Terms and Conditions- The Company uses third party providers to manage the data security for this site. All data is stored in encrypted format that meets standards defined by HIPAA (Health Insurance Portability and Accountability Act). All data transfer is executed using similar standards that meet or exceed HIPAA, and no data is transferred to users that do not have specific data access keys.

\n\nThe Company uses third party providers to manage the data security for this site. All data is stored in encrypted format that meets standards defined by HIPAA (Health Insurance Portability and Accountability Act). All data transfer is executed using similar standards that meet or exceed HIPAA, and no data is transferred to users that do not have specific data access keys.

\n\nCookies are data stored on the user’s hard drive containing information about the user’s browsing history. Usage of a cookie is not linked to any personally identifiable information while visiting the Company’s site.

\n\nBy using the Company’s and services, you signify your acceptance of this Privacy Policy, as stated. If you do not agree to this policy, you should not continue, and you should not use our service. Should we make any changes to the Privacy Policy, we will post these changes prominently, so users are always aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it. We recommend that you read this Privacy Policy each time you use our Website in case you missed our notice of changes to the Privacy Policy. Your continued use of the services and site following the posting of changes to these terms will mean you accept those changes.

\n\nThe Health Insurance Portability &amp; Accountability Act of 1996 (HIPAA) is a federal program requiring that all medical records and other individually identifiable health information used, or disclosed, by us in any form, whether electronically, on paper, or orally, are kept properly confidential. This Act gives you, the Patient, significant new rights to understand and control how your health information is used. HIPAA provides penalties for covered entities that misuse personal health information.If you do not agree to this policy, you should not continue, and you should not use our service. Should we make any changes to the Privacy Policy, we will post these changes prominently, so users are always aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it.
    </string>
    <string name="dummy_private_policy_content">
Private Policy- The Company uses third party providers to manage the data security for this site. All data is stored in encrypted format that meets standards defined by HIPAA (Health Insurance Portability and Accountability Act). All data transfer is executed using similar standards that meet or exceed HIPAA, and no data is transferred to users that do not have specific data access keys.The Company uses third party providers to manage the data security for this site. All data is stored in encrypted format that meets standards defined by HIPAA (Health Insurance Portability and Accountability Act). All data transfer is executed using similar standards that meet or exceed HIPAA, and no data is transferred to users that do not have specific data access keys.

\n\nCookies are data stored on the user’s hard drive containing information about the user’s browsing history. Usage of a cookie is not linked to any personally identifiable information while visiting the Company’s site.

\n\nBy using the Company’s and services, you signify your acceptance of this Privacy Policy, as stated. If you do not agree to this policy, you should not continue, and you should not use our service. Should we make any changes to the Privacy Policy, we will post these changes prominently, so users are always aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it. We recommend that you read this Privacy Policy each time you use our Website in case you missed our notice of changes to the Privacy Policy. Your continued use of the services and site following the posting of changes to these terms will mean you accept those changes.

\n\nThe Health Insurance Portability &amp; Accountability Act of 1996 (HIPAA) is a federal program requiring that all medical records and other individually identifiable health information used, or disclosed, by us in any form, whether electronically, on paper, or orally, are kept properly confidential. This Act gives you, the Patient, significant new rights to understand and control how your health information is used. HIPAA provides penalties for covered entities that misuse personal health information.If you do not agree to this policy, you should not continue, and you should not use our service. Should we make any changes to the Privacy Policy, we will post these changes prominently, so users are always aware of what information we collect, how we use it, and under what circumstances, if any, we disclose it.

</string>
    <string name="title_read_more">Read More</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_sign_in">Login</string>
    <string name="hint_user_email">Email</string>
    <string name="hint_user_password">Password</string>
    <string name="title_i_have_forgotten_my_password">I have forgotten my password</string>
    <string name="title_log_in">LogIn</string>
    <string name="action_log_in">Login</string>
    <string name="title_or">OR</string>
    <string name="title_login_with">Login with</string>
    <string name="title_facebook">Facebook</string>
    <string name="title_google">Google</string>
    <string name="title_what_is_your_phone_no">What is your phone number ?</string>
    <string name="title_phone_type">Phone Type</string>
    <string name="title_by_providing_our_mobile_no">By providing your mobile number, you give us permission to contact you via text or call.</string>
    <string name="action_back">Back</string>
    <string name="action_continue">Continue</string>
    <string name="title_date_of_birth">Date of birth</string>
    <string name="title_what_email_address">What will be your email address ?</string>
    <string name="title_what_is_your_first_name">What is your first name ?</string>
    <string name="title_what_is_your_last_name">What is your last name ?</string>
    <string name="title_gender">Gender</string>
    <string name="title_what_will_be_your_password">What will be your password ?</string>
    <string name="title_six_character_minimum">6 Characters Minimum</string>
    <string name="title_one_uppercase_and_one_lowercase">One Uppercase and One Lowercase</string>
    <string name="title_one_number_and_one_symbol">One Number and One Symbol</string>
    <string name="action_create_account">Create Account</string>
    <string name="title_i_agree_to_live_care_i">I agree to livecare24\'s</string>
    <string name="title_i_agree_to_live_care_ii">Terms of Use</string>
    <string name="title_i_agree_to_live_care_iii">Privacy Policy</string>
    <string name="hint_d_d_m_m_y_y_y_y">D D - M M - Y Y Y Y</string>
    <string name="title_male">Male</string>
    <string name="title_female">Female</string>
    <string name="title_other">Other</string>
    <string name="title_and_sign"><![CDATA[&]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_please_enter_your_mobile_no">Please enter your email and \nwe will send OTP number</string>
    <string name="hint_mobile_email">Email</string>
    <string name="action_send">Send</string>
    <string name="title_please_enter">Please enter</string>
    <string name="title_one_time_password">"A One time Passcode has been sent to "</string>
    <string name="title_email">abc@gmail.com</string>
    <string name="title_create_new_password">Create New Password</string>
    <string name="title_please_enter_otp_no">Please enter the otp number that \nhas been sent to your email</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="hint_enter_otp">Enter OTP</string>
    <string name="hint_enter_new_password">Enter new Password</string>
    <string name="hint_enter_confirm_new_password">Confirm new Password</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_consults">My Consults</string>
    <string name="menu_my_medical_records">My Medical Records</string>
    <string name="menu_blogs">Blogs</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_prescription">Prescription</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_us">About Us</string>
    <string name="hint_phone_no">Phone Number</string>
    <string name="hint_sample_name">Henry</string>
    <string name="hint_sample_surname">Dods</string>
</resources>