<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:checked="true"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_consults"
            android:icon="@drawable/ic_consult"
            android:title="@string/menu_my_consults" />

        <item
            android:id="@+id/nav_my_medical_records"
            android:icon="@drawable/ic_medical_record"
            android:title="@string/menu_my_medical_records" />
        <item
            android:id="@+id/nav_blogs"
            android:icon="@drawable/ic_blog"
            android:title="@string/menu_blogs" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_my_profile" />

        <item
            android:id="@+id/nav_prescription"
            android:icon="@drawable/ic_prescription"
            android:title="@string/menu_prescription" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/menu_notifications" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/menu_about_us" />

    </group>


<!--    <group>-->

<!--        <item-->
<!--            android:id="@+id/nav_sign_out"-->
<!--            android:icon="@drawable/ic_profile"-->
<!--            android:title="@string/menu_my_profile" />-->
<!--    </group>-->
</menu>