<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_label_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald_regular"
        android:gravity="center"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/title_create_new_password"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_i"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/title_please_enter_otp_no"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_two" />


    <Button
        android:id="@+id/btn_reset_password"
        style="@style/ButtonStyleI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:minHeight="0dp"
        android:layout_marginTop="@dimen/_40sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/action_reset_password"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_new_password"
        app:rippleColor="@color/colorWhite" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_otp"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="@dimen/_40sdp"
        android:autofillHints=""
        android:background="@drawable/background_edit_text_i"
        android:hint="@string/hint_enter_otp"
        android:inputType="number"
        android:digits="1234567890"
        android:maxLength="50"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textAppearance="@style/EditTextStyleI"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_i" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_new_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:autofillHints=""
        android:imeOptions="actionNext"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/background_edit_text_i"
        android:hint="@string/hint_enter_new_password"
        android:inputType="textPassword"
        android:maxLength="50"

        android:maxLines="1"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textAppearance="@style/EditTextStyleI"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/edt_otp" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_confirm_new_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:autofillHints=""
        android:imeOptions="actionGo"
        android:background="@drawable/background_edit_text_i"
        android:hint="@string/hint_enter_confirm_new_password"
        android:inputType="textPassword"
        android:maxLength="50"
        android:maxLines="1"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:textAppearance="@style/EditTextStyleI"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/edt_new_password" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar_ii"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_reset_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/btn_reset_password" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16sdp" />
</androidx.constraintlayout.widget.ConstraintLayout>